[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchkde"
version = "0.1.0"
description = "A differentiable implementation of kernel density estimation in PyTorch"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Klaus-Rudolf Kladny", email = "kkladny@tuebingen.mpg.de" }
]
keywords = ["density estimation", "kde", "pytorch", "differentiable"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy>=1.21.0",  # Replace with your project's dependencies
    "requests>=2.26.0"
]
[tool.setuptools.packages.find]
where = ["."]
include = ["torchkde*"]

[project.urls]
"Homepage" = "https://github.com/rudolfwilliam/torch-kde"